src/test/deca/syntax/valid/created/testWhile/whileTrue.deca
// Description :
//    Test d'une boucle while avec une condition toujours vraie (boucle infinie)
//
// Résultats :
//    Ok

{
    int x;
    x = 2;
    while (true) {
        x = x - 1;
    }
}
